backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: backend
status:
  loadBalancer: {}
