kb-pfolio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpfolio-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
  labels:
    app: hpfolio-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hpfolio-kb-0
  sessionAffinity: None
