ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pfolio-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: '200'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '200'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '200'
    cert-manager.io/cluster-issuer: lets-encrypt-prod
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000

        - path: /admin
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080
  tls:
    - hosts:
        - kubernetes.docker.internal
      secretName: postgres-secret
